--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
 	"name" : "metooweb/oldtailor-sdk",
 	"type" : "library",
 	"require" : {
-		"php" : ">=7.1"
+		"php" : ">=7.1",
+		"hprose/hprose" : "~2.0",
+		"metooweb/helper" : "dev-master"
 	}
 }
